--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-title" content="ureport_ecaro">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>U-Report Online</title>
+  <title>U-Report</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
